--- a/index.html
+++ b/index.html
@@ -2,11 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="WDD 230 - Web Frontend Development, Chase Wallace, course assignment portal">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wdd230</title>
+    <title>Chase Wallace - WDD 230 - Web Frontend Development</title>
+    <link rel="stylesheet" href="styles/base.css">
 </head>
 <body>
-    <h1>Hello World</h1>
-    
+    <header>
+        <img src="images/profile_picture.jpeg" alt="Profile Picture">
+        <h1>Chase Wallace</h1>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="lesson03/chamber-site-plan.html">Site Plan</a>
+        <a href="chamber/">Chamber</a>
+        <a href="https://www.byui.edu/" target="_blank" rel="noopener noreferrer">BYU-Idaho Homepage</a>
+        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/22?lang=eng" target="_blank" rel="noopener noreferrer">Favorite Scripture</a>
+    </nav>
+    <main>
+        <h2>WDD 230: Web Frontend Development</h2>
+        <section class="card">
+            <h3>Learning Activities</h3>
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </section>
+        <section class="card">
+            <h3>Information</h3>
+            <p>Cache Valley, Utah</p>
+            <p>Input weather here</p>
+            <p>Page Visits:</p>
+        </section>
+    </main>
+    <footer>
+        <p>
+            &copy; <span id="year"></span>
+        </p>
+        <p>
+            Chase Wallace
+        </p>
+        <p>
+            Cache Valley, Utah
+        </p>
+        <p id="lastModified">
+
+        </p>
+    </footer>
+<script src="scripts/getdates.js"></script>
 </body>
 </html>
