fixed footer p to line up properly

--- a/index.html
+++ b/index.html
@@ -40,12 +40,8 @@
     </main>
     <footer>
         <p>
-            &copy; <span id="year"></span>
-        </p>
-        <p>
-            Chase Wallace
-        </p>
-        <p>
+            &copy; <span id="year"></span><br>
+            Chase Wallace <br>
             Cache Valley, Utah
         </p>
         <p id="lastModified">
