added 5 li in learning activities

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
             </ul>
         </section>
         <section class="card">
