added meta author

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="WDD 230 - Web Frontend Development, Chase Wallace, course assignment portal">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta author="description" content="Chase Wallace">
     <title>Chase Wallace - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
 </head>
