--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:image" content="https://www.explorelogan.com/assets/files/Utah%20Stops%20on%20the%20Way.jpg">
     <meta property="og:url" content="https://cwallace033.github.io/wdd230/" >
     <title>Chase Wallace - WDD 230 - Web Frontend Development</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
 </head>
