--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <a href="lesson01/holygrail.html"><li>Holy Grail</li></a>
+                <a href="lesson02/design.html"><li>Design</li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
             </ul>
         </section>
         <section class="card">
