added html and css to media query

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul>
                 <a href="lesson01/holygrail.html"><li>Holy Grail</li></a>
                 <a href="lesson02/design.html"><li>Design</li></a>
-                <a href=""><li></li></a>
+                <a href="lesson02/media-query.html"><li>Media Query</li></a>
                 <a href=""><li></li></a>
                 <a href=""><li></li></a>
                 <a href=""><li></li></a>
