--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Chase Wallace - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
@@ -20,34 +21,38 @@
         <h1>Chase Wallace</h1>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="lesson03/chamber-site-plan.html">Site Plan</a>
-        <a href="chamber/">Chamber</a>
-        <a href="https://www.byui.edu/" target="_blank" rel="noopener noreferrer">BYU-Idaho Homepage</a>
-        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/22?lang=eng" target="_blank" rel="noopener noreferrer">Favorite Scripture</a>
+        <ul>
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="chamber/">Chamber</a></li>
+            <li><a href="https://www.byui.edu/" target="_blank" rel="noopener noreferrer">BYU-Idaho Homepage</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/22?lang=eng" target="_blank" rel="noopener noreferrer">Favorite Scripture</a></li>
+        </ul>
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <a href="lesson01/holygrail.html"><li>Holy Grail</li></a>
-                <a href="lesson02/design.html"><li>Design</li></a>
-                <a href="lesson02/media-query.html"><li>Media Query</li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-            </ul>
+                <a href="lesson01/holygrail.html"><li class="list">Holy Grail</li></a>
+                <a href="lesson02/design.html"><li class="list">Design</li></a>
+                <a href="lesson02/media-query.html"><li class="list">Media Query</li></a>
+                <a href=""><li class="list"></li></a>
+                <a href=""><li class="list"></li></a>
+                <a href=""><li class="list"></li></a>
+                <a href=""><li class="list"></li></a>
+                <a href=""><li class="list"></li></a>
+                <a href=""><li class="list"></li></a>
+                <a href=""><li class="list"></li></a>
+                </ul>
         </section>
         <section class="card">
             <h3>Information</h3>
             <p>Cache Valley, Utah</p>
             <p>Input weather here</p>
             <p>Page Visits:</p>
+            <br><br>
+            <br><br>
         </section>
     </main>
     <footer>
