--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Chase Wallace">
     <meta property="og:title" content="WDD 230 - Web Frontend Development">
-    <meta property="og:type" content="Homepage" />
+    <meta property="og:type" content="Homepage">
     <meta property="og:image" content="https://www.explorelogan.com/assets/files/Utah%20Stops%20on%20the%20Way.jpg">
     <meta property="og:url" content="https://cwallace033.github.io/wdd230/" >
     <title>Chase Wallace - WDD 230 - Web Frontend Development</title>
@@ -21,13 +21,11 @@
         <h1>Chase Wallace</h1>
     </header>
     <nav>
-        <ul>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="chamber/">Chamber</a></li>
-            <li><a href="https://www.byui.edu/" target="_blank" rel="noopener noreferrer">BYU-Idaho Homepage</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/22?lang=eng" target="_blank" rel="noopener noreferrer">Favorite Scripture</a></li>
-        </ul>
+        <a href="#" class="active">Home</a>
+        <a href="lesson03/chamber-site-plan.html">Site Plan</a>
+        <a href="chamber/">Chamber</a>
+        <a href="https://www.byui.edu/" target="_blank" rel="noopener noreferrer">BYU-Idaho Homepage</a>
+        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/22?lang=eng" target="_blank" rel="noopener noreferrer">Favorite Scripture</a>
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
@@ -35,15 +33,15 @@
             <h3>Learning Activities</h3>
             <ul>
                 <a href="lesson01/holygrail.html"><li class="list">Holy Grail</li></a>
-                <a href="lesson02/design.html"><li class="list">Design</li></a>
-                <a href="lesson02/media-query.html"><li class="list">Media Query</li></a>
-                <a href=""><li class="list"></li></a>
-                <a href=""><li class="list"></li></a>
-                <a href=""><li class="list"></li></a>
-                <a href=""><li class="list"></li></a>
-                <a href=""><li class="list"></li></a>
-                <a href=""><li class="list"></li></a>
-                <a href=""><li class="list"></li></a>
+                <a href="lesson02/design-principles.html"><li class="list">Design Principles</li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
+                <a href=""><li></li></a>
                 </ul>
         </section>
         <section class="card">
