--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <a href="lesson01/holygrail.html"><li class="list">Holy Grail</li></a>
-                <a href="lesson02/design-principles.html"><li class="list">Design Principles</li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                <a href=""><li></li></a>
-                </ul>
+                <li><a href="lesson01/holygrail.html">Holy Grail</a></li>
+                <li><a href="lesson02/design-principles.html">Design Principles</a></li> 
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>               
+                <li><a href=""></a></li>                
+                <li><a href=""></a></li>   
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
         </section>
         <section class="card">
             <h3>Information</h3>
