added css combinator image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul>
                 <li><a href="lesson01/holygrail.html">Holy Grail</a></li>
                 <li><a href="lesson02/design-principles.html">Design Principles</a></li> 
-                <li><a href=""></a></li>
+                <li><a href="learning_activities/images/css_combinators.png">CSS Combinators Image</a></li>
                 <li><a href=""></a></li>               
                 <li><a href=""></a></li>                
                 <li><a href=""></a></li>   
