--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li><a href="lesson02/design-principles.html">Design Principles</a></li> 
                 <li><a href="learning_activities/images/css_combinators.png">CSS Combinators Image</a></li>
                 <li><a href="https://codepen.io/Chase-Wallace/pen/wvbwWQm"></a>CSS Pseudo-elements</li>               
-                <li><a href=""></a></li>                
+                <li><a href="https://codepen.io/Chase-Wallace/pen/YzbKGKQ"></a>Responsive Menu</li>                
                 <li><a href=""></a></li>   
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
