--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <li><a href="lesson01/holygrail.html">Holy Grail</a></li>
                 <li><a href="lesson02/design-principles.html">Design Principles</a></li> 
                 <li><a href="learning_activities/images/css_combinators.png">CSS Combinators Image</a></li>
-                <li><a href="https://codepen.io/Chase-Wallace/pen/wvbwWQm"></a>CSS Pseudo-elements</li>               
-                <li><a href="https://codepen.io/Chase-Wallace/pen/YzbKGKQ"></a>Responsive Menu</li>                
+                <li><a href="https://codepen.io/Chase-Wallace/pen/wvbwWQm">CSS Pseudo-elements</a></li>               
+                <li><a href="https://codepen.io/Chase-Wallace/pen/YzbKGKQ">Responsive Menu</a></li>                
                 <li><a href=""></a></li>   
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
