added meta data

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="Smithfield Chamber Site Plan" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 230 - Web Frontend Development, Chase Wallace, Chamber Site Plan">
+    <meta name="author" content="Chase Wallace">
     <title>Smithfield Chamber Site Plan</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -11,7 +13,7 @@
 </head>
 <body>
     <main>
-        <h1>Site Name</h1>
+        <h1>Site Plan Name</h1>
         <p>The name for the site will be Smithfield Commerce. This is because it will be centered around the town of Smithfield.</p>
 
         <h2>Site Purpose</h2>
@@ -24,7 +26,7 @@
         <p>How to contact the Chamber of Commerce?</p>
 
         <h3>
-            Color Palette
+            Color Schema
         </h3>
 
           Palette URL: <a href="https://coolors.co/949494-6ee4fe-000001-c1e16a-34485d" target="_blank">https://coolors.co/949494-6ee4fe-000001-c1e16a-34485d</a>
