added link to pseduo classes codepen

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="learning_activities/images/css_combinators.png">CSS Combinators Image</a></li>
                 <li><a href="https://codepen.io/Chase-Wallace/pen/wvbwWQm">CSS Pseudo-elements</a></li>               
                 <li><a href="https://codepen.io/Chase-Wallace/pen/YzbKGKQ">Responsive Menu</a></li>                
-                <li><a href=""></a></li>   
+                <li><a href="https://codepen.io/Chase-Wallace/pen/ZENGELJ">Pseduo Classes</a></li>   
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
