created chamber page

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -34,7 +34,7 @@
     
         <table class="colors">
             <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
-            <tr><td class="primary">[#34485D]</td><td class="secondary">[#949494]</td><td class="accent1">[#6EE4FE]</td><td class="accent2">[#C1E16A]</td></tr>
+            <tr><td class="primary">[#34485D]</td><td class="secondary">[#949494]</td><td class="accent1">[#C1E16A]</td><td class="accent2">[#6EE4FE]</td></tr>
         </table>
         <p>This color palette is pulled from the Smithfield City Logo. The Primary and secondary colors will be used mostly as the background colors. Making up the majority of color in the website. The accent colors will be used to highlight special information such as the join the chamber button or upcoming events. </p>
         
