fixed html validation error

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,15 +39,15 @@
         </section>
 
         <section class="events">
-            <p>Events</p>
+            <h3>Events</h3>
         </section>
 
         <section class="events">
-            <p>Events</p>
+            <h3>Events</h3>
         </section>
 
         <section class="events">
-            <p>Events</p>
+            <h3>Events</h3>
         </section>
 
         <section class="card">
@@ -57,15 +57,15 @@
         </section>
 
         <section class="events">
-            <p>Business Shoutout</p>
+            <h3>Business Shoutout</h3>
         </section>
 
         <section class="events">
-            <p>Chamber Meetings</p>
+            <h3>Chamber Meetings</h3>
         </section>
 
         <section class="events">
-            <p>More Info</p>
+            <h3>More Info</h3>
         </section>
 
     </main>
