fixed container for correct format & hamburger

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
     </nav>
     <main>
         <section>
-            <img src="images/smithfield_city.png" alt="">
+            <img class="hero" src="images/smithfield_city.png" alt="">
         </section>
         <section class="action">
             <h2>Join Now</h2>
@@ -38,35 +38,32 @@
 
         </section>
 
-        <section class="events">
-            <h3>Events</h3>
-        </section>
 
-        <section class="events">
-            <h3>Events</h3>
-        </section>
-
-        <section class="events">
-            <h3>Events</h3>
-        </section>
-
-        <section class="card">
-            <h3>Weather</h3>
-            <p>Smithfield, Utah</p>
-            <p>Input weather here</p>
-        </section>
-
-        <section class="events">
-            <h3>Business Shoutout</h3>
-        </section>
-
-        <section class="events">
-            <h3>Chamber Meetings</h3>
-        </section>
-
-        <section class="events">
-            <h3>More Info</h3>
-        </section>
+        <div class="container">
+            <div class="item">
+                <h3>Events</h3>
+            </div>
+            <div class="item">
+                <h3>Events</h3>
+            </div>
+            <div class="item">
+                <h3>Events</h3>
+            </div>
+            <div class="item">
+                <h3>Weather</h3>
+                <p>Smithfield, Utah</p>
+                <p>Input weather here</p>
+            </div>
+            <div class="item">
+                <h3>Business Shoutout</h3>
+            </div>
+            <div class="item">
+                <h3>Chamber Meetings</h3>
+            </div>
+            <div class="item">
+                <h3>More Info</h3>
+            </div>
+          </div>
 
     </main>
     <footer>
