added darkmode switch. moved action position

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,15 +29,17 @@
         <a href="">Membership</a>
     </nav>
     <main>
-        <section>
+        <label class="switch">
+            <input type="checkbox" id="toggleSwitch">
+            <span class="slider round"></span>
+        </label>
+        <div class="hero_container">
             <img class="hero" src="images/smithfield_city.png" alt="">
-        </section>
-        <section class="action">
-            <h2>Join Now</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas esse ut velit modi optio praesentium! Consequuntur asperiores, tempore, laboriosam alias nesciunt deleniti sit dicta in temporibus dolorem placeat. Ea?</p>
-
-        </section>
-
+            <section class="action">
+                <h2>Join Now</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas esse ut velit modi optio praesentium! Consequuntur asperiores, tempore, laboriosam alias nesciunt deleniti sit dicta in temporibus dolorem placeat. Ea?</p>
+            </section>
+        </div>
 
         <div class="container">
             <div class="item">
@@ -83,5 +85,6 @@
     </footer>
 <script src="scripts/getdates.js"></script>
 <script src="scripts/hamburger.js"></script>
+<script src="scripts/darkmode.js"></script>
 </body>
 </html>
