trying to fix bug

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="WDD 230 - Web Frontend Development, Chase Wallace, Chamber Site">
     <meta name="author" content="Chase Wallace">
     <meta property="og:title" content="WDD 230 - Chamber">
-    <meta property="og:type" content="Homepage">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.explorelogan.com/assets/files/Utah%20Stops%20on%20the%20Way.jpg">
     <meta property="og:url" content="https://cwallace033.github.io/wdd230/chamber" >
     <title>Smithfield Chamber of Commerce</title>
