--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="https://codepen.io/Chase-Wallace/pen/ZENGELJ">Pseduo Classes</a></li>   
                 <li><a href="lesson05/bom.html">BOM Favorites</a></li>
                 <li><a href="lesson03/images/landscape.webp">Picture Resizing</a></li>
-                <li><a href=""></a></li>
+                <li><a href="lesson06/responsive-images.html">Responsive Images</a></li>
                 <li><a href=""></a></li>
             </ul>
         </section>
