--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="images/profile_picture.jpeg" alt="Profile Picture">
+        <img src="images/profile_picture.webp" alt="Profile Picture">
         <h1>Chase Wallace</h1>
     </header>
     <button id="menu"></button>
@@ -29,6 +29,16 @@
         <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/22?lang=eng" target="_blank" rel="noopener noreferrer">Favorite Scripture</a>
     </nav>
     <main>
+        <div class="hero">
+            <picture>
+                <source srcset="images/hero-small.webp" media="(max-width: 400px)">
+                <source srcset="images/hero-large.webp" media="(max-width: 1500px)">
+                <img src="images/hero-large.webp" alt="Logan Temple" width="1278" height="800">
+            </picture>
+            <div class="herolabel">
+                <p>Logan Utah Temple</p>
+            </div>
+        </div>
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3>Learning Activities</h3>
