--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Chase Wallace">
     <meta property="og:title" content="WDD 230 - Web Frontend Development">
-    <meta property="og:type" content="Homepage">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.explorelogan.com/assets/files/Utah%20Stops%20on%20the%20Way.jpg">
     <meta property="og:url" content="https://cwallace033.github.io/wdd230/" >
     <title>Chase Wallace - WDD 230 - Web Frontend Development</title>
