--- a/chamber/index.html
+++ b/chamber/index.html
@@ -80,17 +80,20 @@
 
     </main>
     <footer>
-        <p>
-            &copy; <span id="year"></span>
-        </p>
-        <p>|</p>
-        <p>Chase Wallace
-        </p>
-        <p>|</p>
-        <p>WDD 230 
-        </p>
-        <p>|</p>
-        <p id="lastModified">
+        <p>info@notafakeemail.org</p>
+        <div class="bottom">
+            <p>
+                &copy; <span id="year"></span>
+            </p>
+            <p>|</p>
+            <p>Chase Wallace
+            </p>
+            <p>|</p>
+            <p>WDD 230 
+            </p>
+            <p>|</p>
+            <p id="lastModified">
+        </div>
 
         </p>
     </footer>
