--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li><a href="lesson05/bom.html">BOM Favorites</a></li>
                 <li><a href="lesson03/images/landscape.webp">Picture Resizing</a></li>
                 <li><a href="lesson06/responsive-images.html">Responsive Images</a></li>
-                <li><a href=""></a></li>
+                <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
             </ul>
         </section>
         <section class="card">
