--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <li><a href="lesson03/images/landscape.webp">Picture Resizing</a></li>
                 <li><a href="lesson06/responsive-images.html">Responsive Images</a></li>
                 <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
+                <li><a href="lesson07/lesson05/bom.html">Updated FAV BOM List</a></li>
             </ul>
         </section>
         <section class="card">
