--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h3>Information</h3>
             <p>Cache Valley, Utah</p>
             <p>Input weather here</p>
-            <p>Page Visits:</p>
+            <p><span class="label">Number of Visits: </span><span class="visits"></span></p>
             <br><br>
             <br><br>
         </section>
@@ -81,5 +81,6 @@
     </footer>
 <script src="scripts/getdates.js"></script>
 <script src="scripts/hamburger.js"></script>
+<script src="scripts/visitcounter.js"></script>
 </body>
 </html>
