edited large css footer

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
      </main>
     <footer>
         <p>
-            &copy; <span id="year"></span><br>
-            Chase Wallace <br>
-            Cache Valley, Utah
+            &copy; <span id="year"></span>
         </p>
+        <p>Chase Wallace</p>
+        <p>Cache Valley</p>
         <p id="lastModified">
 
         </p>
