added information in the sidebar

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -40,16 +40,16 @@
                     <img src="/chamber/images/old_smithfield.webp" alt="old smithfield">
                 </div>
                 <div class="sidebar_item">
-                    <h2>Demographics</h2>
-                    <p>The first population count of Smithfield was in 1890. There were about 1,500 people. The current population of Smithfield is about 15,172</p>
+                    <h2>History</h2>
+                    <p>Smithfield was founded in 1859. It was named after John Glover Smith, who was a prominent local leader and early settler. Smithfield was primarily an agriculture town. With Summit Creek providing easy access to water the land was ideal for farming and raising livestock. </p>
                 </div>
                 <div class="sidebar_item">
-                    <h2>History</h2>
-                    <p>Smithfield was founded in 1859. It was named after John Glover Smith. Since it was founded Smithfield has never had a population decrease.</p>
+                    <h2>Demographics</h2>
+                    <p>The first population count of Smithfield was in 1890. There were about 1,500 people. The current population of Smithfield is about 15,172. Since it was founded Smithfield has never had a population decrease.</p>
                 </div>
                 <div class="sidebar_item">
                     <h2>Activities</h2>
-                    <p>There are many fun things to do in Smithfield, Utah. There is a beautiful canyon full of campsites and hiking trails. Smithfield has many parks to play at as well. It also has a splash pad for the hot summer months.</p>
+                    <p>Smithfield offers a variety of fun activities for residents and visitors. Outdoor enthusiasts can explore Smithfield Canyon, which has many beautiful campsites and hiking trails. For younger children, the Smithfield splash pad provides a refreshing escape during the hot summer months. For older children and even adults there is a skate park. Additionally, the city boasts several parks where people can play, relax, and enjoy the natural beauty of the area.</p>
                 </div>
                 <div class="sidebar_item">
                     <h2>Visits:</h2>
@@ -97,10 +97,10 @@
             <p>WDD 230 
             </p>
             <p>|</p>
-            <p id="lastModified">
+            <p id="lastModified"> </p>
         </div>
 
-        </p>
+       
     </footer>
 <script src="scripts/getdates.js"></script>
 <script src="scripts/hamburger.js"></script>
