changed link in nav

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,7 +24,7 @@
     <button id="menu"></button>
     <nav class="navigation">
         <a href="/chamber/index.html">Home</a>
-        <a href="/chamber/discover.html">Discover</a>
+        <a href="#">Discover</a>
         <a href="">Directory</a>
         <a href="">Membership</a>
     </nav>
