--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -23,7 +23,7 @@
     </header>
     <button id="menu"></button>
     <nav class="navigation">
-        <a href="/chamber/index.html">Home</a>
+        <a href="chamber/">Home</a>
         <a href="#">Discover</a>
         <a href="">Directory</a>
         <a href="">Membership</a>
