--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -37,7 +37,7 @@
             <aside class="sidebar">
                 <div class="sidebar_item">
                     <h2>Smithfield City</h2>
-                    <img src="/chamber/images/old_smithfield.webp" alt="old smithfield">
+                    <img src="/images/old_smithfield.webp" alt="old smithfield">
                 </div>
                 <div class="sidebar_item">
                     <h2>History</h2>
@@ -58,27 +58,27 @@
             </aside>
             <section class="discover_main_content">
                 <figure>
-                    <img src="/chamber/images/smithfield_sign.webp" alt="smitfield sign" loading="lazy">
+                    <img src="/images/smithfield_sign.webp" alt="smitfield sign" loading="lazy">
                     <figcaption>Smithfield Sign</figcaption>
                 </figure>
                 <figure>
-                    <img src="/chamber/images/smithfield_party.webp" alt="Smithfield party" loading="lazy">
+                    <img src="/images/smithfield_party.webp" alt="Smithfield party" loading="lazy">
                     <figcaption>Smithfield party</figcaption>
                 </figure>
                 <figure>
-                    <img src="/chamber/images/smithfield_splashpad.webp" alt="Splashpad" loading="lazy">
+                    <img src="/images/smithfield_splashpad.webp" alt="Splashpad" loading="lazy">
                     <figcaption>Smithfield Splashpad</figcaption>
                 </figure>
                 <figure>
-                    <img src="/chamber/images/mack_park.webp" alt="Mack Park" loading="lazy">
+                    <img src="/images/mack_park.webp" alt="Mack Park" loading="lazy">
                     <figcaption>Mack Park</figcaption>
                 </figure>
                 <figure>
-                    <img src="/chamber/images/smithfield_mountains.webp" alt="Mountains" loading="lazy">
+                    <img src="/images/smithfield_mountains.webp" alt="Mountains" loading="lazy">
                     <figcaption>Sky View High School Hill</figcaption>
                 </figure>
                 <figure>
-                    <img src="/chamber/images/smithfield_canyon.webp" alt="Canyon" loading="lazy">
+                    <img src="/images/smithfield_canyon.webp" alt="Canyon" loading="lazy">
                     <figcaption>Smithfield Canyon</figcaption>
                 </figure>
             </section>
