this should work this time

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <link rel="icon" href="chamber/favicon.ico">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
     </header>
     <button id="menu"></button>
     <nav class="navigation">
-        <a href="chamber/">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">Discover</a>
         <a href="">Directory</a>
         <a href="">Membership</a>
@@ -37,7 +37,7 @@
             <aside class="sidebar">
                 <div class="sidebar_item">
                     <h2>Smithfield City</h2>
-                    <img src="/images/old_smithfield.webp" alt="old smithfield">
+                    <img src="images/old_smithfield.webp" alt="old smithfield">
                 </div>
                 <div class="sidebar_item">
                     <h2>History</h2>
@@ -58,27 +58,27 @@
             </aside>
             <section class="discover_main_content">
                 <figure>
-                    <img src="/images/smithfield_sign.webp" alt="smitfield sign" loading="lazy">
+                    <img src="images/smithfield_sign.webp" alt="smitfield sign" loading="lazy">
                     <figcaption>Smithfield Sign</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/smithfield_party.webp" alt="Smithfield party" loading="lazy">
+                    <img src="images/smithfield_party.webp" alt="Smithfield party" loading="lazy">
                     <figcaption>Smithfield party</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/smithfield_splashpad.webp" alt="Splashpad" loading="lazy">
+                    <img src="images/smithfield_splashpad.webp" alt="Splashpad" loading="lazy">
                     <figcaption>Smithfield Splashpad</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/mack_park.webp" alt="Mack Park" loading="lazy">
+                    <img src="images/mack_park.webp" alt="Mack Park" loading="lazy">
                     <figcaption>Mack Park</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/smithfield_mountains.webp" alt="Mountains" loading="lazy">
+                    <img src="images/smithfield_mountains.webp" alt="Mountains" loading="lazy">
                     <figcaption>Sky View High School Hill</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/smithfield_canyon.webp" alt="Canyon" loading="lazy">
+                    <img src="images/smithfield_canyon.webp" alt="Canyon" loading="lazy">
                     <figcaption>Smithfield Canyon</figcaption>
                 </figure>
             </section>
