--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <link rel="icon" href="chamber/favicon.ico">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
