made tablebuild in lesson08

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 <li><a href="lesson06/responsive-images.html">Responsive Images</a></li>
                 <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
                 <li><a href="lesson07/lesson05/bom.html">Updated FAV BOM List</a></li>
+                <li><a href="lesson08/tablebuild.html">ACME Table Build</a></li>
+
             </ul>
         </section>
         <section class="card">
