--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
                 <li><a href="lesson07/lesson05/bom.html">Updated FAV BOM List</a></li>
                 <li><a href="lesson08/tablebuild.html">ACME Table Build</a></li>
+                <li><a href="lesson08/Form-start/index.html">Form</a></li>
 
             </ul>
         </section>
