--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <a href="chamber/">Chamber</a>
         <a href="https://www.byui.edu/" target="_blank" rel="noopener noreferrer">BYU-Idaho Homepage</a>
         <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/22?lang=eng" target="_blank" rel="noopener noreferrer">Favorite Scripture</a>
+        <a href="form.html">Rate This Page</a>
+
     </nav>
     <main>
         <div class="hero">
