--- a/lesson08/Form-start/index.html
+++ b/lesson08/Form-start/index.html
@@ -79,15 +79,16 @@
                 <legend>Funding</legend>
                 <Label>Anticipated Completion Date <input type="date" name="completeDate"></Label>
                 <label>Course Subject
-                    <select name="subject"></select>
-                    <option value="">Please Select One &#9662;</option>
-                    <option value="software">Software Development</option>
-                    <option value="creative">Creative Professional</option>
-                    <option value="info">Information Technology</option>
-                    <option value="data">Data Professional</option>
-                    <option value="construction">Construction</option>
-                    <option value="business">Business Professional</option>
-                    <option value="security">Cyber Security</option>
+                    <select name="subject">
+                        <option value="">Please Select One &#9662;</option>
+                        <option value="software">Software Development</option>
+                        <option value="creative">Creative Professional</option>
+                        <option value="info">Information Technology</option>
+                        <option value="data">Data Professional</option>
+                        <option value="construction">Construction</option>
+                        <option value="business">Business Professional</option>
+                        <option value="security">Cyber Security</option>
+                    </select>   
 
                 </label>
 
