added form and thankyou page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,10 +23,10 @@
     </header>
     <button id="menu"></button>
     <nav class="navigation">
-        <a href="#">Home</a>
+        <a href="#" class="active">Home</a>
         <a href="discover.html">Discover</a>
         <a href="">Directory</a>
-        <a href="">Membership</a>
+        <a href="join.html">Join</a>
     </nav>
     <main>
         <label class="switch">
@@ -34,21 +34,13 @@
             <span class="slider round"></span>
         </label>
 
-        <div class="hero">
-            <picture>
-                <source srcset="images/small-wdd230-org.webp" media="(max-width: 500px)">
-                <source srcset="images/medium-wdd230-org.webp" media="(max-width: 1000px)">
-                <source srcset="images/large-wdd230-org.webp" media="(max-width: 1500px)">
-                <img src="images/large-wdd230-org.webp" alt="large-wdd230-org" width="1278" height="800">
-            </picture>
-        </div>
-        <!-- <div class="hero_container">
+        <div class="hero_container">
             <img class="hero" src="images/smithfield_city.webp" alt="">
             <section class="action">
                 <h2>Join Now</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas esse ut velit modi optio praesentium! Consequuntur asperiores, tempore, laboriosam alias nesciunt deleniti sit dicta in temporibus dolorem placeat. Ea?</p>
             </section>
-        </div> -->
+        </div>
 
         <div class="container">
             <div class="item">
