--- a/form.html
+++ b/form.html
@@ -34,11 +34,11 @@
         <form method="get" action="record.html" class="form1">
             <fieldset>
                 <legend>Applicant Information</legend>
-                <label>Username<input type="text" id="username" name="username" required></label>
+                <label for="username">Username<input type="text" id="username" name="username" required></label>
 
-                <label>Password<input type="password" id="password" name="password" required pattern=".{8,}" placeholder="At least 8 characters long"> </label>
+                <label for="password">Password<input type="password" id="password" name="password" required pattern=".{8,}" placeholder="At least 8 characters long"> </label>
 
-                <label>Re-enter Password<input type="password" name="password2" id="password2" required ></label>
+                <label for="password2">Re-enter Password<input type="password" name="password2" id="password2" required ></label>
 
                 <label for="email">Email <input type="email" id="email" name="email" title="A valid byui.edu email address" pattern="[a-zA-Z0-9_.\-]+@byui.edu" placeholder="Your byui email address" required></label>
 
