fixed text area

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -54,7 +54,7 @@
 
                     <label for="title">Title or Position <input type="text" name="title" id="title" pattern="[a-zA-Z\s-] {7,}"></label>
 
-                    <label for="busDescription">Business Description<input type="textarea" name="busDescription" id="busDescription"></label>
+                    <label for="busDescription">Business Description</label><textarea id="busDescription" rows="4" cols="50"></textarea>
                 </fieldset>
 
                 <fieldset>
