completes lesson09 work

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 <li><a href="lesson07/lesson05/bom.html">Updated FAV BOM List</a></li>
                 <li><a href="lesson08/tablebuild.html">ACME Table Build</a></li>
                 <li><a href="lesson08/Form-start/index.html">Form</a></li>
+                <li><a href="lesson09/new-ward-members.json">New Families Json</a></li>
+                <li><a href="lesson09/prophets.html">Prophets</a></li>
+
 
             </ul>
         </section>
