--- a/index.html
+++ b/index.html
@@ -44,25 +44,7 @@
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3>Learning Activities</h3>
-            <ul>
-                <li><a href="lesson01/holygrail.html">Holy Grail</a></li>
-                <li><a href="lesson02/design-principles.html">Design Principles</a></li> 
-                <li><a href="learning_activities/images/css_combinators.png">CSS Combinators Image</a></li>
-                <li><a href="https://codepen.io/Chase-Wallace/pen/wvbwWQm">CSS Pseudo-elements</a></li>               
-                <li><a href="https://codepen.io/Chase-Wallace/pen/YzbKGKQ">Responsive Menu</a></li>                
-                <li><a href="https://codepen.io/Chase-Wallace/pen/ZENGELJ">Pseduo Classes</a></li>   
-                <li><a href="lesson05/bom.html">BOM Favorites</a></li>
-                <li><a href="lesson03/images/landscape.webp">Picture Resizing</a></li>
-                <li><a href="lesson06/responsive-images.html">Responsive Images</a></li>
-                <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
-                <li><a href="lesson07/lesson05/bom.html">Updated FAV BOM List</a></li>
-                <li><a href="lesson08/tablebuild.html">ACME Table Build</a></li>
-                <li><a href="lesson08/Form-start/index.html">Form</a></li>
-                <li><a href="lesson09/new-ward-members.json">New Families Json</a></li>
-                <li><a href="lesson09/prophets.html">Prophets</a></li>
-
-
-            </ul>
+            <div id="weeks"></div>
         </section>
         <section class="card">
             <h3>Information</h3>
@@ -90,5 +72,6 @@
 <script src="scripts/getdates.js"></script>
 <script src="scripts/hamburger.js"></script>
 <script src="scripts/visitcounter.js"></script>
+<script src="scripts/links.js"></script>
 </body>
 </html>
