--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,9 +24,9 @@
     <button id="menu"></button>
     <nav class="navigation">
         <a href="index.html">Home</a>
-        <a href="#">Discover</a>
-        <a href="">Directory</a>
-        <a href="">Membership</a>
+        <a href="#" class="active">Discover</a>
+        <a href="directory.html">Directory</a>
+        <a href="join.html">Join</a>
     </nav>
     <main>
         <label class="switch">
