--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 230 - Web Frontend Development, Chase Wallace, Chamber Site">
+    <meta name="description" content="WDD 230 - Web Frontend Development, Chase Wallace, Directory">
     <meta name="author" content="Chase Wallace">
-    <meta property="og:title" content="WDD 230 - Chamber">
+    <meta property="og:title" content="WDD 230 - Directory">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.explorelogan.com/assets/files/Utah%20Stops%20on%20the%20Way.jpg">
     <meta property="og:url" content="https://cwallace033.github.io/wdd230/chamber" >
@@ -56,8 +56,6 @@
             <p>|</p>
             <p id="lastModified">
         </div>
-
-        </p>
     </footer>
 <script src="scripts/getdates.js"></script>
 <script src="scripts/hamburger.js"></script>
