--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -36,7 +36,7 @@
                 <button id="list">List</button>
             </div>
             <hr>
-            <article class="">
+            <article class="grid">
                 <div id="business_container"></div>
             </article>
         </div>
