--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
         <section class="card">
             <h3>Information</h3>
             <p>Cache Valley, Utah</p>
-            <p>Input weather here</p>
+            <p>The current temperature in Cache Valley, Utah is <span id="current-temp"></span></p>
+            <p>It is <span id="weather-desc"></span>.</p>
+            <figure>
+                <img id="weather-icon" src="" alt="">
+                <figcaption></figcaption>
+            </figure>
             <p><span class="label">Number of Visits: </span><span class="visits"></span></p>
             <br><br>
             <br><br>
@@ -73,5 +78,6 @@
 <script src="scripts/hamburger.js"></script>
 <script src="scripts/visitcounter.js"></script>
 <script src="scripts/links.js"></script>
+<script src="scripts/weather.js"></script>
 </body>
 </html>
