--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
             <h3>Information</h3>
             <p>Cache Valley, Utah</p>
             <p>The current temperature in Cache Valley, Utah is <span id="current-temp"></span></p>
-            <p>It is <span id="weather-desc"></span>.</p>
+            <p><span id="weather-desc"></span>.</p>
             <figure>
                 <img id="weather-icon" src="" alt="">
-                <figcaption></figcaption>
             </figure>
             <p><span class="label">Number of Visits: </span><span class="visits"></span></p>
             <br><br>
