added business shoutout and fixed some css

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -106,6 +106,7 @@
         </div>
     </main>
     <footer>
+        <h4>Contact Us:</h4>
         <p>info@notafakeemail.org</p>
         <div class="bottom">
             <p>
