--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -85,6 +85,7 @@
         </div>
     </main>
     <footer>
+        <h4>Contact Us:</h4>
         <p>info@notafakeemail.org</p>
         <div class="bottom">
             <p>
