--- a/chamber/index.html
+++ b/chamber/index.html
@@ -48,39 +48,38 @@
             </picture>
             
             <section class="action">
-                <h2>Join Now</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas esse ut velit modi optio praesentium! Consequuntur asperiores, tempore, laboriosam alias nesciunt deleniti sit dicta in temporibus dolorem placeat. Ea?</p>
+                <h2><a href="join.html">Join Now!</a></h2>
             </section>
         </div>
 
         <div class="container">
             <div class="item">
                 <h3>Events</h3>
+                <p>Fourth of July! This Thursday</p>
             </div>
             <div class="item">
                 <h3>Events</h3>
+                <p>Hot Dog Eating Constest <br>Friday, July 5th at Forester Acres</p>
             </div>
             <div class="item">
                 <h3>Events</h3>
             </div>
             <div class="item">
                 <h3>Weather</h3>
-                <p>Smithfield, Utah</p>
                 <p>The current temperature in Smithfield, Utah is <span id="current-temp"></span></p>
                 <p>Current weather: <span id="weather-desc"></span>.</p>
-                <figure>
-                    <img id="weather-icon" src="" alt="">
-                </figure>
+                <p><br></p>
                 <p>Wind speed: <span class="windspeed"></span> mph</p>
                 <p id="windchill"></p>
-
+                <p><br></p>
+                <h3>3-day forecast</h3>
                 <div id="forecast"></div>
             </div>
             <div class="item">
-                <h3>Business Shoutout</h3>
+                <p class="gold"></p>
             </div>
             <div class="item">
-                <h3>Chamber Meetings</h3>
+                <p class="silver"></p>
             </div>
             <div class="item">
                 <h3>More Info</h3>
@@ -89,6 +88,7 @@
 
     </main>
     <footer>
+        <h4>Contact Us:</h4>
         <p>info@notafakeemail.org</p>
         <div class="bottom">
             <p>
@@ -105,9 +105,10 @@
         </div>
     </footer>
 <script src="scripts/banner.js"></script>
+<script src="scripts/darkmode.js"></script>
 <script src="scripts/getdates.js"></script>
 <script src="scripts/hamburger.js"></script>
-<script src="scripts/darkmode.js"></script>
+<script src="scripts/shoutout.js"></script>
 <script src="scripts/weather.js"></script>
 </body>
 </html>
