made a table in json and a way to display it

--- a/finalProject/rentals.html
+++ b/finalProject/rentals.html
@@ -42,6 +42,19 @@
             </section>
         </div>
 
+        <table id="pricingTable">
+            <thead>
+                <tr>
+                    <th>Rental Type</th>
+                    <th>Max Riders</th>
+                    <th>Reservation Half Day (3 hrs)</th>
+                    <th>Reservation Full Day</th>
+                    <th>Walk-In Half Day (3 hrs)</th>
+                    <th>Walk-In Full Day</th>
+                </tr>
+            </thead>
+        </table>
+
     </main>
     <footer>
         <p>
@@ -56,6 +69,7 @@
     </footer>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/rentals.js"></script>
 
 
 </body>
