added css for table

--- a/finalProject/rentals.html
+++ b/finalProject/rentals.html
@@ -31,7 +31,7 @@
         <a href="reservation.html">Reservations</a>
         <a href="contact.html">Contact Us</a>
     </nav>
-    <main>
+    <main class="rentals">
         <div class="hero_container">
             <picture class="hero">
                 <img class="hero" src="images/cozumelCoast.webp" alt="Cozumel coast">
@@ -53,6 +53,7 @@
                     <th>Walk-In Full Day</th>
                 </tr>
             </thead>
+            <tbody></tbody>
         </table>
 
     </main>
